Added pytorch lightning code for LSTM
Signed-off-by: Alexis Balayre <60859013+AlexisBal@users.noreply.github.com>

--- a/code/dataset_preparation.ipynb
+++ b/code/dataset_preparation.ipynb
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,38 +490,37 @@
     "\n",
     "\n",
     "def create_datasets(\n",
-    "    annotation_file, train_ratio=0.7, val_ratio=0.2, test_ratio=0.1, output_dir=\".\"\n",
+    "    annotation_file, train_ratio=0.64, val_ratio=0.16, test_ratio=0.2, output_dir=\".\"\n",
     "):\n",
     "    \"\"\"\n",
-    "    Crée les fichiers train.json, validation.json et test.json à partir de annotations.json.\n",
+    "    Creates train.json, validation.json and test.json files from annotations.json.\n",
     "\n",
-    "    Paramètres :\n",
-    "        annotation_file : Chemin vers le fichier annotations.json\n",
-    "        train_ratio : Ratio des données attribuées à l'entraînement\n",
-    "        val_ratio : Ratio des données attribuées à la validation\n",
-    "        test_ratio : Ratio des données attribuées aux tests\n",
-    "        output_dir : Répertoire où les fichiers resultants seront sauvegardés\n",
+    "    Parameters :\n",
+    "        annotation_file (str): Path to the annotations.json file\n",
+    "        train_ratio (int): Ratio of data allocated to training\n",
+    "        val_ratio (int): Ratio of data assigned to validation\n",
+    "        test_ratio (int) : Ratio of data allocated to tests\n",
+    "        output_dir (str): Directory where the resultant files will be saved\n",
     "    \"\"\"\n",
-    "    # Charger les annotations\n",
+    "    # Loads the annotations json file\n",
     "    with open(annotation_file, \"r\") as f:\n",
     "        annotations = json.load(f)\n",
     "\n",
-    "    # Vérifier que les ratios de division sont corrects\n",
-    "    assert (\n",
-    "        train_ratio + val_ratio + test_ratio == 1.0\n",
-    "    ), \"Les ratios doivent sommeiller à 1.0\"\n",
+    "    # Checks that the division ratios are correct\n",
+    "    assert train_ratio + val_ratio + test_ratio == 1.0, \"Ratios should slumber at 1.0\"\n",
     "\n",
-    "    # Diviser les annotations en tags d'entraînement, validation et test\n",
-    "    train_val_annotations, test_annotations = train_test_split(\n",
-    "        annotations, test_size=test_ratio, random_state=42\n",
-    "    )\n",
-    "    train_annotations, val_annotations = train_test_split(\n",
-    "        train_val_annotations,\n",
-    "        test_size=val_ratio / (train_ratio + val_ratio),\n",
-    "        random_state=42,\n",
-    "    )\n",
+    "    num_annotations = len(annotations)\n",
     "\n",
-    "    # Sauvegarder les fichiers JSON pour l'entraînement, la validation et les tests\n",
+    "    # Calculer les indices de division\n",
+    "    train_end = int(train_ratio * num_annotations)\n",
+    "    val_end = int((train_ratio + val_ratio) * num_annotations)\n",
+    "\n",
+    "    # Découper les annotations en chaînes continues pour l'entraînement, la validation et les tests\n",
+    "    train_annotations = annotations[:train_end]\n",
+    "    val_annotations = annotations[train_end:val_end]\n",
+    "    test_annotations = annotations[val_end:]\n",
+    "\n",
+    "    # Saves JSON files for training, validation and testing\n",
     "    with open(f\"{output_dir}/train.json\", \"w\") as f:\n",
     "        json.dump(train_annotations, f, indent=4)\n",
     "\n",
@@ -532,12 +531,29 @@
     "        json.dump(test_annotations, f, indent=4)\n",
     "\n",
     "    print(\n",
-    "        \"Les fichiers train.json, validation.json et test.json ont été créés et sauvegardés.\"\n",
-    "    )\n",
+    "        \"‘The files train.json, validation.json and test.json have been created and saved.\"\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "‘The files train.json, validation.json and test.json have been created and saved.\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
-    "\n",
-    "# Exemple d'utilisation\n",
-    "create_datasets(\"path_to_annotations.json\", output_dir=\"./output_dir\")"
+    "create_datasets(\n",
+    "    \"/Users/alexis/Library/CloudStorage/OneDrive-Balayre&Co/Cranfield/Thesis/thesis-github-repository/data/synthetic/3d_nonlinear_motion_dataset_test6/annotations.json\",\n",
+    "    output_dir=\"/Users/alexis/Library/CloudStorage/OneDrive-Balayre&Co/Cranfield/Thesis/thesis-github-repository/data/synthetic/3d_nonlinear_motion_dataset_test6\",\n",
+    ")"
    ]
   }
  ],
