--- a/code/dataset_preparation.ipynb
+++ b/code/dataset_preparation.ipynb
@@ -74,6 +74,67 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Label Studio Conversion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json \n",
+    "\n",
+    "def convert_json(input_file, output_file):\n",
+    "    with open(input_file, \"r\") as f:\n",
+    "        data = json.load(f)\n",
+    "\n",
+    "    output_data = []\n",
+    "\n",
+    "    for item in data:\n",
+    "        frame = item[\"file_upload\"].split(\"-\")[-1].split(\".\")[0]\n",
+    "        if item[\"annotations\"]:\n",
+    "            first_annotation = item[\"annotations\"][0]\n",
+    "            if first_annotation[\"result\"]:\n",
+    "                first_result = first_annotation[\"result\"][0]\n",
+    "                bbox = first_result[\"value\"]\n",
+    "\n",
+    "                # Convert percentages to pixel values based on original image width/height\n",
+    "                x = bbox[\"x\"] * first_result[\"original_width\"] / 100.0\n",
+    "                y = bbox[\"y\"] * first_result[\"original_height\"] / 100.0\n",
+    "                width = bbox[\"width\"] * first_result[\"original_width\"] / 100.0\n",
+    "                height = bbox[\"height\"] * first_result[\"original_height\"] / 100.0\n",
+    "\n",
+    "                bbox_xywh = [x, y, width, height]\n",
+    "\n",
+    "                output_entry = {\n",
+    "                    \"frame\": frame,\n",
+    "                    \"bbox\": bbox_xywh\n",
+    "                }\n",
+    "\n",
+    "                output_data.append(output_entry)\n",
+    "\n",
+    "    with open(output_file, \"w\") as f:\n",
+    "        json.dump(output_data, f, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Specify your input and output file paths\n",
+    "# input_file = \"/Users/alexis/Library/CloudStorage/OneDrive-Balayre&Co/Cranfield/Thesis/thesis-github-repository/code/LSTM/data/outdoor2/test_outdoor2.json\"\n",
+    "# output_file = \"/Users/alexis/Library/CloudStorage/OneDrive-Balayre&Co/Cranfield/Thesis/thesis-github-repository/code/LSTM/data/outdoor2/outdoor2_full_dataset.json\"\n",
+    "\n",
+    "# convert_json(input_file, output_file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Synthetic Data Generation\n"
    ]
   },
@@ -481,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -551,8 +612,8 @@
    "source": [
     "\n",
     "create_datasets(\n",
-    "    \"/Users/alexis/Library/CloudStorage/OneDrive-Balayre&Co/Cranfield/Thesis/thesis-github-repository/data/synthetic/3d_nonlinear_motion_dataset_test6/annotations.json\",\n",
-    "    output_dir=\"/Users/alexis/Library/CloudStorage/OneDrive-Balayre&Co/Cranfield/Thesis/thesis-github-repository/data/synthetic/3d_nonlinear_motion_dataset_test6\",\n",
+    "    \"/Users/alexis/Library/CloudStorage/OneDrive-Balayre&Co/Cranfield/Thesis/thesis-github-repository/code/LSTM/data/outdoor1/outdoor1_full_dataset.json\",\n",
+    "    output_dir=\"/Users/alexis/Library/CloudStorage/OneDrive-Balayre&Co/Cranfield/Thesis/thesis-github-repository/code/LSTM/data/outdoor1\",\n",
     ")"
    ]
   }
