--- a/code/data_utils/dataset_preparation.ipynb
+++ b/code/data_utils/dataset_preparation.ipynb
@@ -537,7 +537,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Function to create training, validation & test datasets"
+    "### Function to create training, validation & test datasets with a classic JSON file"
    ]
   },
   {
@@ -615,6 +615,161 @@
     "    \"/Users/alexis/Library/CloudStorage/OneDrive-Balayre&Co/Cranfield/Thesis/thesis-github-repository/code/LSTM/data/outdoor1/outdoor1_full_dataset.json\",\n",
     "    output_dir=\"/Users/alexis/Library/CloudStorage/OneDrive-Balayre&Co/Cranfield/Thesis/thesis-github-repository/code/LSTM/data/outdoor1\",\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Function to create training, validation & test datasets with a YOLO format dataset folder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import random\n",
+    "import shutil\n",
+    "from pathlib import Path\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "def create_splits_and_yaml(dataset_path, train_size=0.64, val_size=0.16, test_size=0.2):\n",
+    "    dataset_path = Path(dataset_path)\n",
+    "    images_path = dataset_path / \"images\"\n",
+    "    labels_path = dataset_path / \"labels\"\n",
+    "\n",
+    "    assert images_path.exists() and labels_path.exists(), \"Invalid dataset path, or missing 'images' and 'labels' folders.\"\n",
+    "\n",
+    "    # Get all image files\n",
+    "    images = list(images_path.glob(\"*.jpg\")) + list(images_path.glob(\"*.png\"))  # depending on your dataset format\n",
+    "\n",
+    "    # Split the dataset\n",
+    "    train_images, test_images = train_test_split(images, test_size=test_size, random_state=42)\n",
+    "    train_images, val_images = train_test_split(train_images, test_size=val_size/(train_size+val_size), random_state=42)\n",
+    "\n",
+    "    def move_files(file_list, dest_images_folder, dest_labels_folder):\n",
+    "        for image in file_list:\n",
+    "            label_file = labels_path / (image.stem + \".txt\")\n",
+    "            if label_file.exists():\n",
+    "                shutil.copy(label_file, dest_labels_folder / label_file.name)\n",
+    "            shutil.copy(image, dest_images_folder / image.name)\n",
+    "\n",
+    "    split_folders = [\"train\", \"val\", \"test\"]\n",
+    "    for folder in split_folders:\n",
+    "        dest_images_folder = dataset_path / folder / \"images\"\n",
+    "        dest_labels_folder = dataset_path / folder / \"labels\"\n",
+    "        (dataset_path / folder).mkdir(parents=True, exist_ok=True)\n",
+    "        dest_images_folder.mkdir(exist_ok=True)\n",
+    "        dest_labels_folder.mkdir(exist_ok=True)\n",
+    "\n",
+    "    move_files(train_images, dataset_path / \"train\" / \"images\", dataset_path / \"train\" / \"labels\")\n",
+    "    move_files(val_images, dataset_path / \"val\" / \"images\", dataset_path / \"val\" / \"labels\")\n",
+    "    move_files(test_images, dataset_path / \"test\" / \"images\", dataset_path / \"test\" / \"labels\")\n",
+    "\n",
+    "    # Create the .yaml file\n",
+    "    yaml_content = f\"\"\"\n",
+    "    train: {str(dataset_path / 'train')}\n",
+    "    val: {str(dataset_path / 'val')}\n",
+    "    test: {str(dataset_path / 'test')}\n",
+    "\n",
+    "    # number of classes\n",
+    "    nc: 1\n",
+    "\n",
+    "    # class names\n",
+    "    names: ['fuel_port']\n",
+    "    \"\"\"\n",
+    "\n",
+    "    with open(dataset_path / \"dataset.yaml\", \"w\") as yaml_file:\n",
+    "        yaml_file.write(yaml_content.strip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example usage:\n",
+    "dataset_folder = \"/Users/alexis/Library/CloudStorage/OneDrive-Balayre&Co/Cranfield/Thesis/thesis-github-repository/data/frames/YOLO\"  # replace with your actual dataset path\n",
+    "create_splits_and_yaml(dataset_folder)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Converter for the provided dataset to YOLO format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import json\n",
+    "from glob import glob\n",
+    "\n",
+    "def convert_annotation(json_file, output_dir):\n",
+    "    with open(json_file, 'r') as f:\n",
+    "        data = json.load(f)\n",
+    "\n",
+    "    image_path = os.path.join(output_dir, os.path.splitext(os.path.basename(json_file))[0] + '.jpg')\n",
+    "    txt_output_path = os.path.join(output_dir, os.path.splitext(os.path.basename(json_file))[0] + '.txt')\n",
+    "\n",
+    "    with open(txt_output_path, 'w') as txt_out:\n",
+    "        for shape in data['shapes']:\n",
+    "            if shape['shape_type'] != 'rectangle':\n",
+    "                continue\n",
+    "\n",
+    "            label = shape['label']\n",
+    "            points = shape['points']\n",
+    "            x1, y1 = points[0]\n",
+    "            x2, y2 = points[1]\n",
+    "\n",
+    "            # Convert to YOLO format\n",
+    "            width = data['imageWidth']\n",
+    "            height = data['imageHeight']\n",
+    "            xc = (x1 + x2) / 2 / width\n",
+    "            yc = (y1 + y2) / 2 / height\n",
+    "            w = (x2 - x1) / width\n",
+    "            h = (y2 - y1) / height\n",
+    "\n",
+    "            class_id = 0  # Update this if you have multiple classes and a class mapping system\n",
+    "            txt_out.write(f\"{class_id} {xc} {yc} {w} {h}\\n\")\n",
+    "\n",
+    "def convert_annotations_in_directory(input_dir, output_dir):\n",
+    "    if not os.path.exists(output_dir):\n",
+    "        os.makedirs(output_dir)\n",
+    "\n",
+    "    json_files = glob(os.path.join(input_dir, '*.json'))\n",
+    "\n",
+    "    for json_file in json_files:\n",
+    "        convert_annotation(json_file, output_dir)\n",
+    "\n",
+    "    # Ensure image files are also copied over to the output directory\n",
+    "    image_files = glob(os.path.join(input_dir, '*.jpg'))\n",
+    "    for image_file in image_files:\n",
+    "        dest_file = os.path.join(output_dir, os.path.basename(image_file))\n",
+    "        if not os.path.exists(dest_file):\n",
+    "            os.symlink(image_file, dest_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if __name__ == '__main__':\n",
+    "    input_directory = 'input_dir'  # Replace with the path to your input directory\n",
+    "    output_directory = 'output_dir'  # Replace with the path to your output directory\n",
+    "\n",
+    "    convert_annotations_in_directory(input_directory, output_directory)"
    ]
   }
  ],
