--- a/code/object_detection/YOLOv10/YOLOv10.ipynb
+++ b/code/object_detection/YOLOv10/YOLOv10.ipynb
@@ -315,7 +315,7 @@
      "output_type": "stream",
      "text": [
       "\u001b[34m\u001b[1mval: \u001b[0mScanning /Users/alexis/Library/CloudStorage/OneDrive-Balayre&Co/Cranfield/Thesis/thesis-github-repository/data/frames/full_dataset_annotated_YOLO/test/labels.cache... 2208 images, 53 backgrounds, 0 corrupt: 100%|██████████| 2208/2208 [00:00<?, ?it/s]\n",
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95):  50%|█████     | 9/18 [09:34<09:48, 65.44s/it]"
+      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95):  56%|█████▌    | 10/18 [10:41<08:46, 65.75s/it]"
      ]
     }
    ],
