added a script to combine YOLOv10 and LSTM model
Signed-off-by: Alexis Balayre <60859013+AlexisBal@users.noreply.github.com>

--- a/code/data_utils/dataset_preparation.ipynb
+++ b/code/data_utils/dataset_preparation.ipynb
@@ -426,13 +426,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "import csv\n",
     "import json\n",
     "\n",
+    "def verify_value_is_between_0_and_1(value):\n",
+    "    if value < 0:\n",
+    "        return 0\n",
+    "    elif value > 1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return value\n",
+    "\n",
+    "def convert_percentage_to_normalized(x_pct, y_pct, width_pct, height_pct, original_width, original_height):\n",
+    "    # Convert percentage to normalized\n",
+    "    x1_norm = verify_value_is_between_0_and_1((x_pct / 100.0) * original_width / original_width)\n",
+    "    y1_norm = verify_value_is_between_0_and_1((y_pct / 100.0) * original_height / original_height)\n",
+    "    x2_norm = verify_value_is_between_0_and_1(((x_pct / 100.0) * original_width + (width_pct / 100.0) * original_width) / original_width)\n",
+    "    y2_norm = verify_value_is_between_0_and_1(((y_pct / 100.0) * original_height + (height_pct / 100.0) * original_height) / original_height)\n",
+    "    return x1_norm, y1_norm, x2_norm, y2_norm\n",
     "\n",
     "def convert_csv_to_json(csv_file):\n",
     "    data = []\n",
@@ -444,7 +459,6 @@
     "        for row in reader:\n",
     "            try:\n",
     "                annotation = json.loads(row[\"label\"]) if row[\"label\"] else []\n",
-    "                # Extract the frame number from the 'image' field\n",
     "                frame_id = int(row[\"image\"].split(\"_\")[-1].split(\".\")[0])\n",
     "\n",
     "                if frame_id == 0:\n",
@@ -452,40 +466,53 @@
     "                        data.append({\"video_id\": video_id, \"frames\": frames})\n",
     "                        video_id += 1\n",
     "                        frames = []\n",
-    "                    frames = []\n",
-    "                \n",
-    "                # Convert percentages to pixel values based on original image width/height\n",
-    "                x = annotation[0][\"x\"] * annotation[0][\"original_width\"] / 100.0 if annotation else 0\n",
-    "                y = annotation[0][\"y\"] * annotation[0][\"original_height\"] / 100.0 if annotation else 0\n",
-    "                width = annotation[0][\"width\"] * annotation[0][\"original_width\"] / 100.0 if annotation else 0\n",
-    "                height = annotation[0][\"height\"] * annotation[0][\"original_height\"] / 100.0 if annotation else 0\n",
-    "                bbox_xywh = [x, y, width, height]\n",
-    "                output_entry = {\n",
-    "                    \"frame\": frame_id,\n",
-    "                    \"bbox\": bbox_xywh\n",
-    "                }\n",
-    "                frames.append(output_entry)\n",
+    "\n",
+    "                if annotation:\n",
+    "                    original_width = annotation[0][\"original_width\"]\n",
+    "                    original_height = annotation[0][\"original_height\"]\n",
+    "\n",
+    "                    value = annotation[0]\n",
+    "\n",
+    "                    x_pct = value[\"x\"]\n",
+    "                    y_pct = value[\"y\"]\n",
+    "                    width_pct = value[\"width\"]\n",
+    "                    height_pct = value[\"height\"]\n",
+    "\n",
+    "                    # Convert to normalized xyxy\n",
+    "                    x1_norm, y1_norm, x2_norm, y2_norm = convert_percentage_to_normalized(\n",
+    "                        x_pct, y_pct, width_pct, height_pct, original_width, original_height\n",
+    "                    )\n",
+    "\n",
+    "                    bbox_xyxy_norm = [x1_norm, y1_norm, x2_norm, y2_norm]\n",
+    "\n",
+    "                    output_entry = {\n",
+    "                        \"frame\": frame_id,\n",
+    "                        \"bbox\": bbox_xyxy_norm\n",
+    "                    }\n",
+    "                    frames.append(output_entry)\n",
     "\n",
     "            except json.JSONDecodeError:\n",
-    "                # Skip any rows that have an issue with the 'label' field\n",
     "                print(f\"Skipping row: {row}\")\n",
     "                continue\n",
+    "\n",
+    "    if frames:\n",
+    "        data.append({\"video_id\": video_id, \"frames\": frames})\n",
     "\n",
     "    return data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Example usage\n",
-    "# csv_file = '/Users/alexis/Library/CloudStorage/OneDrive-Balayre&Co/Cranfield/Thesis/thesis-github-repository/data/frames/full_dataset_annotated_fpp/raw_data.csv'\n",
-    "# json_data = convert_csv_to_json(csv_file)\n",
+    "csv_file = '/Users/alexis/Library/CloudStorage/OneDrive-Balayre&Co/Cranfield/Thesis/thesis-github-repository/data/frames/full_dataset_annotated_fpp/raw_data.csv'\n",
+    "json_data = convert_csv_to_json(csv_file)\n",
     "\n",
-    "# with open('/Users/alexis/Library/CloudStorage/OneDrive-Balayre&Co/Cranfield/Thesis/thesis-github-repository/data/frames/full_dataset_annotated_fpp/full_dataset_formatted.json', 'w') as file:\n",
-    "#     json.dump(json_data, file, indent=2)"
+    "with open('/Users/alexis/Library/CloudStorage/OneDrive-Balayre&Co/Cranfield/Thesis/thesis-github-repository/data/frames/full_dataset_annotated_fpp/full_dataset_formatted.json', 'w') as file:\n",
+    "    json.dump(json_data, file, indent=4)"
    ]
   },
   {
@@ -497,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,15 +590,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Les fichiers train.json, validation.json et test.json ont été créés et enregistrés.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Exemple d'utilisation\n",
-    "# create_datasets(\n",
-    "#     \"/Users/alexis/Library/CloudStorage/OneDrive-Balayre&Co/Cranfield/Thesis/thesis-github-repository/data/frames/full_dataset_annotated_fpp/full_dataset_formatted.json\",\n",
-    "#     output_dir=\"/Users/alexis/Library/CloudStorage/OneDrive-Balayre&Co/Cranfield/Thesis/thesis-github-repository/data/frames/full_dataset_annotated_fpp\",\n",
-    "# )"
+    "#Exemple d'utilisation\n",
+    "create_datasets(\n",
+    "    \"/Users/alexis/Library/CloudStorage/OneDrive-Balayre&Co/Cranfield/Thesis/thesis-github-repository/data/frames/full_dataset_annotated_fpp/full_dataset_formatted.json\",\n",
+    "    output_dir=\"/Users/alexis/Library/CloudStorage/OneDrive-Balayre&Co/Cranfield/Thesis/thesis-github-repository/data/frames/full_dataset_annotated_fpp\",\n",
+    ")"
    ]
   }
  ],
